Set up game settings to build for Android

--- a/UE4VRVisualizer.uproject
+++ b/UE4VRVisualizer.uproject
@@ -7,10 +7,15 @@
 		{
 			"Name": "SoundVisualizations",
 			"Enabled": true
+		},
+		{
+			"Name": "GoogleVRHMD",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
 		"PS4",
-		"WindowsNoEditor"
+		"WindowsNoEditor",
+		"Android"
 	]
 }
